tests/baselines/reference/parserIndexSignature2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature2.ts (2 errors) ====
    interface I {
      [public a]
              ~
!!! error TS1018: An index signature parameter cannot have an accessibility modifier.
       ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }